fix: dark mode not persisting across pages

--- a/style.css
+++ b/style.css
@@ -70,3 +70,7 @@
 .dark-mode-icon {
   height: 100%;
 }
+
+.contact-link {
+  color: #6CAE75;
+}
